--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-slick": "^0.29.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
+    "use-timeout": "^1.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
